--- a/_annotation_data/mc00240-001-ff0093-001-001-0010-2.md
+++ b/_annotation_data/mc00240-001-ff0093-001-001-0010-2.md
@@ -1,6 +1,8 @@
 ---
 layout: searchview
 listname: mc00240-001-ff0093-001-001-0010-list.json
-tags: [balcony, railing]
+tags:
+- balcony
+- railing
 ---
 DETAILS OF BALCONY RAILING
