--- a/_annotation_data/mc00084-001-te0159-000-001-0001-2.md
+++ b/_annotation_data/mc00084-001-te0159-000-001-0001-2.md
@@ -1,6 +1,7 @@
 ---
 layout: searchview
 listname: mc00084-001-te0159-000-001-0001-list.json
-tags: [reactor]
+tags:
+- reactor
 ---
 First nuclear reactor on university campus
