write _annotation_data/mc00084-001-te0159-000-001-0001-3.md

--- a/_annotation_data/mc00084-001-te0159-000-001-0001-3.md
+++ b/_annotation_data/mc00084-001-te0159-000-001-0001-3.md
@@ -1,6 +1,7 @@
 ---
 layout: searchview
 listname: mc00084-001-te0159-000-001-0001-list.json
-tags: [campuspreachers]
+tags:
+- campuspreachers
 ---
 This is where the preacher hangs out
