--- a/_annotation_data/mc00240-001-ff0093-001-001-0010-3.md
+++ b/_annotation_data/mc00240-001-ff0093-001-001-0010-3.md
@@ -1,7 +1,6 @@
 ---
 layout: searchview
 listname: mc00240-001-ff0093-001-001-0010-list.json
-tags:
-- partition
+tags: [partition]
 ---
 DETAILS OF PARTITION BETWEEN BANK AND DIRECTORS' ROOM
