--- a/_annotation_data/0002386-1.md
+++ b/_annotation_data/0002386-1.md
@@ -1,4 +1,6 @@
 ---
+imagescr: '<iiif-annotation annotationurl="http://0.0.0.0:5555/annotate/annotations/0002386-1.json"
+  styling="{''image_only'': true}"></iiif-annotation>'
 layout: searchview
 listname: 0002386-list.json
 tags: []
