--- a/_annotation_data/mc00084-001-te0159-000-001-0001-7.md
+++ b/_annotation_data/mc00084-001-te0159-000-001-0001-7.md
@@ -1,4 +1,6 @@
 ---
+imagescr: '<iiif-annotation annotationurl="http://0.0.0.0:5555/annotate/annotations/mc00084-001-te0159-000-001-0001-7.json"
+  styling="{''image_only'': true}"></iiif-annotation>'
 layout: searchview
 listname: mc00084-001-te0159-000-001-0001-list.json
 tags: []
