write _annotation_data/mc00240-001-ff0093-001-001-0010-1.md

--- a/_annotation_data/mc00240-001-ff0093-001-001-0010-1.md
+++ b/_annotation_data/mc00240-001-ff0093-001-001-0010-1.md
@@ -1,5 +1,6 @@
 ---
-imagescr: 'https://iiif.lib.ncsu.edu/iiif/mc00240-001-ff0093-001-001_0010/740,567,3998,4586/full/0/default.jpg'
+imagescr: '<iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/mc00240-001-ff0093-001-001-0010-1.json"
+  styling="{''image_only'': true}"></iiif-annotation>'
 layout: searchview
 listname: mc00240-001-ff0093-001-001-0010-list.json
 tags: []
