--- a/_annotation_data/mc00240-001-ff0093-001-001-0010-2.md
+++ b/_annotation_data/mc00240-001-ff0093-001-001-0010-2.md
@@ -1,8 +1,10 @@
 ---
-imagescr: '<iiif-annotation annotationurl="http://0.0.0.0:5555/annotate/annotations/mc00240-001-ff0093-001-001-0010-2.json"
+imagescr: '<iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/mc00240-001-ff0093-001-001-0010-2.json"
   styling="{''image_only'': true}"></iiif-annotation>'
 layout: searchview
 listname: mc00240-001-ff0093-001-001-0010-list.json
-tags: [balcony, railing]
+tags:
+- balcony
+- railing
 ---
 DETAILS OF BALCONY RAILING
