--- a/_annotation_data/0001-1.md
+++ b/_annotation_data/0001-1.md
@@ -1,5 +1,5 @@
 ---
-imagescr: '<iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/0001-1.json"
+imagescr: '<iiif-annotation annotationurl="https://dnoneill.github.io/annotations/0001-1.json"
   styling="{''image_only'': true}"></iiif-annotation>'
 layout: searchview
 listname: 0001-list.json
@@ -8,4 +8,5 @@ tags:
 - bigdipper
 - constellations
 ---
-This is a rendering of Ursa Major. This constellation translated from the latin means "greater bear." This is in refernce to Ursa Minor (lesser bear) which can be seen in the image below. These constellations are often talked about in contrast to each other. They are also often called the big and little dipper respectively.
+This is a rendering of Ursa Major. This constellation translated from the latin means "greater bear." This is in refernce to Ursa Minor (lesser bear) which can be seen in the image below. 
+These constellations are often talked about in contrast to each other. They are also often called the big and little dipper respectively.
