--- a/_annotation_data/0001-2.md
+++ b/_annotation_data/0001-2.md
@@ -1,5 +1,5 @@
 ---
-imagescr: '<iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/0001-2.json"
+imagescr: '<iiif-annotation annotationurl="https://dnoneill.github.io/annotations/0001-2.json"
   styling="{''image_only'': true}"></iiif-annotation>'
 layout: searchview
 listname: 0001-list.json
