--- a/_annotation_data/0002386-2.md
+++ b/_annotation_data/0002386-2.md
@@ -1,6 +1,6 @@
 ---
-imagescr: '<iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/0002386-2.json"
-  styling="{''image_only'': true}"></iiif-annotation>'
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotations/0002386-2.json"
+  styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 0002386-list.json
 tags: []
