--- a/_annotation_data/mc00240-001-ff0093-001-001-0010-1.md
+++ b/_annotation_data/mc00240-001-ff0093-001-001-0010-1.md
@@ -6,5 +6,4 @@ listname: mc00240-001-ff0093-001-001-0010-list.json
 tags:
 - blueprints
 ---
-Bank and Office Building for Wachovia Bank and Trust Co.
-Salisbury, NC
+Bank and Office Building for Wachovia Bank and Trust Co.Salisbury, NC
