--- a/_annotation_data/0002386-2.md
+++ b/_annotation_data/0002386-2.md
@@ -1,8 +1,9 @@
 ---
-imagescr: <iiif-annotation annotationurl="http://0.0.0.0:5555/annotate/annotations/0002386-2.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/0002386-2.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 0002386-list.json
-tags: []
+tags:
+- polk
 ---
-Hill Library?
+Polk Hall
