--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-1.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-1.md
@@ -1,5 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="http://localhost:4000/annotate/annotations/4058a628-c593-463e-9736-8a821e178fee-1.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/4058a628-c593-463e-9736-8a821e178fee-1.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
