--- a/_annotation_data/4665993-6.md
+++ b/_annotation_data/4665993-6.md
@@ -1,5 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/4665993-6.json"
+imagescr: <iiif-annotation annotationurl="http://0.0.0.0:5555/annotate/annotations/4665993-6.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 4665993-list.json
