--- a/_annotation_data/04fbbb28-d5a7-4408-b7da-800c4e65eda3-1.md
+++ b/_annotation_data/04fbbb28-d5a7-4408-b7da-800c4e65eda3-1.md
@@ -1,5 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="http://0.0.0.0:5555/annotate/annotations/04fbbb28-d5a7-4408-b7da-800c4e65eda3-1.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/04fbbb28-d5a7-4408-b7da-800c4e65eda3-1.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 04fbbb28-d5a7-4408-b7da-800c4e65eda3-list.json
