--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-3.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-3.md
@@ -5,4 +5,4 @@ layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags: []
 ---
-<b>Piazza San Marco<b> also known as St Mark's Square. </b></b>
+<b>Piazza San Marco</b> also known as St Mark's Square.
