write _annotation_data/0001-1.md

--- a/_annotation_data/0001-1.md
+++ b/_annotation_data/0001-1.md
@@ -4,8 +4,7 @@ imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/an
 layout: searchview
 listname: 0001-list.json
 tags:
-- ursamajor
-- bigdipper
 - constellations
 ---
-This is a rendering of Ursa Major. This constellation translated from the latin means "greater bear." This is in refernce to Ursa Minor (lesser bear) which can be seen in the image below. These constellations are often talked about in contrast to each other. They are also often called the big and little dipper respectively.
+This is a rendering of Ursa Major. This constellation translated from the latin means "greater bear." This is in refernce to Ursa Minor (lesser bear) which can be seen in the image below.
+These constellations are often talked about in contrast to each other. They are also often called the big and little dipper respectively.
