write _annotation_data/0001-4.md

--- a/_annotation_data/0001-4.md
+++ b/_annotation_data/0001-4.md
@@ -4,6 +4,7 @@ imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/an
 layout: searchview
 listname: 0001-list.json
 tags:
-- zodiac_constellations
+- zodiac
+- constellations
 ---
 Cancer
