--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-7.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-7.md
@@ -5,6 +5,4 @@ layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags: []
 ---
-church of Santa Maria Assunta also know as I Gesuiti
-church
-standing
+test
