--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-7.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-7.md
@@ -5,4 +5,6 @@ layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags: []
 ---
-test
+church of Santa Maria Assunta as known as I Gesuiti.
+church
+standing
