--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-9.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-9.md
@@ -5,5 +5,6 @@ layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags: []
 ---
-Campo San Maurizio
-campo
+Church of Corpus Domini
+church
+demolished
