write _annotation_data/4058a628-c593-463e-9736-8a821e178fee-10.md

--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-10.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-10.md
@@ -5,6 +5,5 @@ layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags: []
 ---
-Church of San Maurizio. Is now a Museum on music of Baroque Venice.
-church
-deconsecrated
+Campo San Maurizio
+campo
