--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-4.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-4.md
@@ -5,5 +5,6 @@ layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags: []
 ---
-<b>Piazza San Marco</b> also known as St Mark's Square.
-campo
+Santa Maria Gloriosa dei Frari also know as Frari.
+church
+standing
