--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-1.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-1.md
@@ -3,7 +3,7 @@ imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/an
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
-tags: []
+tags:
+- campo
 ---
 Campo San Maurizio
-campo
