--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-2.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-2.md
@@ -3,8 +3,8 @@ imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/an
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
-tags: []
+tags:
+- church
+- deconsecrated
 ---
 Church of San Maurizio. Is now a Museum on music of Baroque Venice.
-church
-deconsecrated
