--- a/_annotation_data/0001-8.md
+++ b/_annotation_data/0001-8.md
@@ -4,7 +4,7 @@ imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/an
 layout: searchview
 listname: 0001-list.json
 tags:
-- greek_mythology,
+- greek_mythology
 - constellations
 ---
 Cepheus, king of Aethiopia.
