write _annotation_data/0001-13.md

--- a/_annotation_data/0001-13.md
+++ b/_annotation_data/0001-13.md
@@ -8,4 +8,4 @@ tags:
 - constellations
 - discarded
 ---
-Apes later know as Musca Borealis. Is latin for northern fly.
+Apes later know as Vespa, Lilium and then Musca Borealis. Is latin for bees.
