write _annotation_data/mc00084-001-te0159-000-001-0001-2.md

--- a/_annotation_data/mc00084-001-te0159-000-001-0001-2.md
+++ b/_annotation_data/mc00084-001-te0159-000-001-0001-2.md
@@ -5,5 +5,7 @@ layout: searchview
 listname: mc00084-001-te0159-000-001-0001-list.json
 tags:
 - reactor
+- standing
 ---
-First nuclear reactor on university campus
+Burlington Nuclear Engineering Lab.
+First nuclear reactor on university campus.
