write _annotation_data/0001-13.md

--- a/_annotation_data/0001-13.md
+++ b/_annotation_data/0001-13.md
@@ -5,7 +5,6 @@ layout: searchview
 listname: 0001-list.json
 tags:
 - animals
-- constellations
-- discarded
+- discarded_constellation
 ---
 Apes later know as Vespa, Lilium and then Musca Borealis. Is latin for bees.
