--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-2.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-2.md
@@ -4,7 +4,6 @@ imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/an
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags:
-- church
-- deconsecrated
+- campo
 ---
-Church of San Maurizio. Is now a Museum on music of Baroque Venice.
+Campo Santa Maria Formosa
