--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-3.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-3.md
@@ -5,6 +5,6 @@ layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags:
 - church
-- standing
+- deconsecrated
 ---
-Santa Maria Gloriosa dei Frari also know as Frari.
+Church of San Maurizio. Is now a Museum on music of Baroque Venice.
