--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-8.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-8.md
@@ -4,7 +4,6 @@ imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/an
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags:
-- church
-- deconsecrated
+- campo
 ---
-San Vidal Church. Currently is used as a event and concert hall
+Piazza San Marco also known as St Mark's Square. 
