write _annotation_data/0001-2.md

--- a/_annotation_data/0001-2.md
+++ b/_annotation_data/0001-2.md
@@ -1,9 +1,8 @@
 ---
-imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/0001-2.json"
-  styling="image_only:true"></iiif-annotation>
+imagescr: <iiif-annotation annotationurl="/0001-2.json" styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 0001-list.json
 tags:
 - animals
 ---
-Ursa Minor
+\u003cp\u003eUrsa Minor\u003c/p\u003e
