--- a/_annotation_data/0001-1.md
+++ b/_annotation_data/0001-1.md
@@ -5,6 +5,6 @@ listname: 0001-list.json
 tags:
 - animals
 ---
-\u003cp\u003eThis is a rendering of Ursa Major. This\u0026nbsp;constellation translated from the latin means "greater bear." This is in refernce to Ursa Minor (lesser bear) which can be seen in the image below.\u003c/p\u003e
-\u003cp\u003eThese constellations are often talked about in contrast to each other. They are also often called the big and little dipper respectively.\u003c/p\u003e
+This is a rendering of Ursa Major. This\u0026nbsp;constellation translated from the latin means "greater bear." This is in refernce to Ursa Minor (lesser bear) which can be seen in the image below.
+These constellations are often talked about in contrast to each other. They are also often called the big and little dipper respectively.
 testing editor
