--- a/_annotation_data/0001-2.md
+++ b/_annotation_data/0001-2.md
@@ -3,6 +3,6 @@ imagescr: <iiif-annotation annotationurl="/annotations/0001-2.json" styling="ima
 layout: searchview
 listname: 0001-list.json
 tags:
-- animals
+- zodiac
 ---
-Ursa Minor
+Gemini
