--- a/_annotation_data/0001-8.md
+++ b/_annotation_data/0001-8.md
@@ -3,6 +3,6 @@ imagescr: <iiif-annotation annotationurl="/annotations/0001-8.json" styling="ima
 layout: searchview
 listname: 0001-list.json
 tags:
-- greek_mythology
+- historical
 ---
-Cepheus, king of Aethiopia.
+Coma Berenices, means "Berenice's Hair" in English. Named for Queen Berenice II of Egypt. Is the only modern constellation named for a historic person. 
