--- a/_annotation_data/0001-10.md
+++ b/_annotation_data/0001-10.md
@@ -3,6 +3,6 @@ imagescr: <iiif-annotation annotationurl="/annotations/0001-10.json" styling="im
 layout: searchview
 listname: 0001-list.json
 tags:
-- zodiac
+- animals
 ---
-Leo
+Canis minor. Translates into English as lesser dog.
