--- a/_annotation_data/0001-12.md
+++ b/_annotation_data/0001-12.md
@@ -1,9 +1,9 @@
 ---
-imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/0001-12.json"
-  styling="image_only:true"></iiif-annotation>
+imagescr: <iiif-annotation annotationurl="/annotations/0001-12.json" styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 0001-list.json
 tags:
 - animals
+- discarded_constellation
 ---
-Lepus. Latin for hare.
+Apes later know as Vespa, Lilium and then Musca Borealis. Is latin for bees.
