--- a/_annotation_data/4665993-4.md
+++ b/_annotation_data/4665993-4.md
@@ -1,6 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/4665993-4.json"
-  styling="image_only:true"></iiif-annotation>
+imagescr: <iiif-annotation annotationurl="/annotations/4665993-4.json" styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 4665993-list.json
 tags: []
