--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-2.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-2.md
@@ -4,6 +4,7 @@ imagescr: <iiif-annotation annotationurl="/annotations/4058a628-c593-463e-9736-8
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags:
-- campo
+- church
+- standing
 ---
-Campo Santa Maria Formosa
+The Chiesa di S. Maria Formosa or Santa Maria Formosa church.
