write _annotation_data/4058a628-c593-463e-9736-8a821e178fee-3.md

--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-3.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-3.md
@@ -4,7 +4,6 @@ imagescr: <iiif-annotation annotationurl="/annotations/4058a628-c593-463e-9736-8
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags:
-- church
-- deconsecrated
+- campo
 ---
-Church of San Maurizio. Is now a Museum on music of Baroque Venice.
+Campo Santa Maria Formosa
