--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-6.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-6.md
@@ -4,8 +4,7 @@ imagescr: <iiif-annotation annotationurl="/annotations/4058a628-c593-463e-9736-8
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags:
-- barges
+- church
+- demolished
 ---
-Bucentaur. State barge of the doges of Venice. They are depicted in the painting <i>The Doge on the Bucintoro near the Riva di Sant'Elena</i> by Francesco Guardi seen below. 
-<br><a title="Francesco Guardi
- [Public domain], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Guardi,Francesco_-_The_Departure_of_Bucentaur_for_the_Lido_on_Ascension_Day.jpg"><img width="200" alt="Guardi,Francesco - The Departure of Bucentaur for the Lido on Ascension Day" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Guardi%2CFrancesco_-_The_Departure_of_Bucentaur_for_the_Lido_on_Ascension_Day.jpg/512px-Guardi%2CFrancesco_-_The_Departure_of_Bucentaur_for_the_Lido_on_Ascension_Day.jpg"></a>
+Cristo Re alla Celestia
