write _annotation_data/4058a628-c593-463e-9736-8a821e178fee-9.md

--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-9.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-9.md
@@ -4,7 +4,6 @@ imagescr: <iiif-annotation annotationurl="/annotations/4058a628-c593-463e-9736-8
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags:
-- church
-- deconsecrated
+- campo
 ---
-San Vidal Church. Currently is used as a event and concert hall
+Piazza San Marco also known as St Mark's Square. 
