write _annotation_data/0001-1.md

--- a/_annotation_data/0001-1.md
+++ b/_annotation_data/0001-1.md
@@ -5,7 +5,5 @@ listname: 0001-list.json
 tags:
 - animals
 ---
-Ursa Major and Ursa Minor.
-Ursa Major translated from the latin means "greater bear."
-This is in reference to Ursa Minor (lesser bear).
+This is a rendering of Ursa Major. This constellation translated from the latin means "greater bear." This is in refernce to Ursa Minor (lesser bear) which can be seen in the image below.
 These constellations are often talked about in contrast to each other. They are also often called the big and little dipper respectively.
