--- a/_annotation_data/0001-6.md
+++ b/_annotation_data/0001-6.md
@@ -3,6 +3,6 @@ imagescr: <iiif-annotation annotationurl="/annotations/0001-6.json" styling="ima
 layout: searchview
 listname: 0001-list.json
 tags:
-- greek_mythology
+- zodiac
 ---
-Andromeda, the chained woman.
+Aries
