--- a/_annotation_data/mc00084-001-te0159-000-001-0001-8.md
+++ b/_annotation_data/mc00084-001-te0159-000-001-0001-8.md
@@ -3,6 +3,7 @@ imagescr: <iiif-annotation annotationurl="/annotations/mc00084-001-te0159-000-00
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: mc00084-001-te0159-000-001-0001-list.json
-tags: []
+tags:
+- standing
 ---
-Hill Library
+Dabney Hall
