--- a/_annotation_data/0001-11.md
+++ b/_annotation_data/0001-11.md
@@ -1,8 +1,9 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotations/0001-11.json" styling="image_only:true"></iiif-annotation>
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/0001-11.json"
+  styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 0001-list.json
 tags:
 - animals
 ---
-Lepus. Latin for hare.
+Canis minor. Translates into English as lesser dog.
