--- a/_annotation_data/0001-005.md
+++ b/_annotation_data/0001-005.md
@@ -1,5 +1,6 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/0001-005.json" styling="image_only:true"></iiif-annotation>
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/0001-005.json"
+  styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 0001-list.json
 tags:
