--- a/_annotation_data/mc00084-001-te0159-000-001-0001-005.md
+++ b/_annotation_data/mc00084-001-te0159-000-001-0001-005.md
@@ -3,6 +3,7 @@ imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/an
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: mc00084-001-te0159-000-001-0001-list.json
-tags: []
+tags:
+- standing
 ---
-Ricard C. "Dick" Bell
+Polk Hall
