--- a/_annotation_data/mc00084-001-te0159-000-001-0001-003.md
+++ b/_annotation_data/mc00084-001-te0159-000-001-0001-003.md
@@ -3,7 +3,6 @@ imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/an
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: mc00084-001-te0159-000-001-0001-list.json
-tags:
-- campuspreachers
+tags: []
 ---
-This is where the preacher hangs out
+August 1974
