--- a/_annotation_data/391536-c0-005.md
+++ b/_annotation_data/391536-c0-005.md
@@ -1,5 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/391536-c0-005.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/391536-c0-005.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 391536-c0-list.json
