write _annotation_data/wh234bz9013-0001-006.md

--- a/_annotation_data/wh234bz9013-0001-006.md
+++ b/_annotation_data/wh234bz9013-0001-006.md
@@ -1,5 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/wh234bz9013-0001-006.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/wh234bz9013-0001-006.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: wh234bz9013-0001-list.json
