--- a/_annotation_data/4628556-4628571-002.md
+++ b/_annotation_data/4628556-4628571-002.md
@@ -1,8 +1,8 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/4628556-4628571-002.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/4628556-4628571-002.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 4628556-4628571-list.json
 tags: []
 ---
-Header text different from Christ Church version.
+This B is illuminated in the Ellesmere Chaucer
