--- a/_annotation_data/4628556-4628571-003.md
+++ b/_annotation_data/4628556-4628571-003.md
@@ -1,8 +1,7 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/4628556-4628571-003.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/4628556-4628571-003.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 4628556-4628571-list.json
 tags: []
 ---
-Handwriting?
