write _annotation_data/627551b3-516f-4d34-8725-2db778724503-003.md

--- a/_annotation_data/627551b3-516f-4d34-8725-2db778724503-003.md
+++ b/_annotation_data/627551b3-516f-4d34-8725-2db778724503-003.md
@@ -1,5 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/627551b3-516f-4d34-8725-2db778724503-003.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/627551b3-516f-4d34-8725-2db778724503-003.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 627551b3-516f-4d34-8725-2db778724503-list.json
