--- a/_annotation_data/fmb-cb-0048-fmb-cb-0048-001r-003.md
+++ b/_annotation_data/fmb-cb-0048-fmb-cb-0048-001r-003.md
@@ -1,5 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/fmb-cb-0048-fmb-cb-0048-001r-003.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/fmb-cb-0048-fmb-cb-0048-001r-003.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: fmb-cb-0048-fmb-cb-0048-001r-list.json
