--- a/_annotation_data/131424-main-001.md
+++ b/_annotation_data/131424-main-001.md
@@ -1,5 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/131424-main-001.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/131424-main-001.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 131424-main-list.json
