--- a/_annotation_data/ua023-015-003-bx0002-004-026-004.md
+++ b/_annotation_data/ua023-015-003-bx0002-004-026-004.md
@@ -1,8 +1,8 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/ua023-015-003-bx0002-004-026-003.json"
+imagescr: <iiif-annotation annotationurl="/annotate/annotations/ua023-015-003-bx0002-004-026-004.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: ua023-015-003-bx0002-004-026-list.json
 tags: []
 ---
-Williams Hall
+Cox Hall
