--- a/_annotation_data/ua023-015-003-bx0002-004-026-002.md
+++ b/_annotation_data/ua023-015-003-bx0002-004-026-002.md
@@ -1,11 +1,8 @@
 ---
-imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/ua023-015-003-bx0002-004-026-002.json"
+imagescr: <iiif-annotation annotationurl="/annotate/annotations/ua023-015-003-bx0002-004-026-002.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: ua023-015-003-bx0002-004-026-list.json
-tags:
-- reactor
-- standing
+tags: []
 ---
-Burlington Nuclear Engineering Lab.
-First nuclear reactor on university campus.
+Polk Hall
