--- a/_annotation_data/ua023-015-003-bx0002-004-026-003.md
+++ b/_annotation_data/ua023-015-003-bx0002-004-026-003.md
@@ -1,5 +1,5 @@
 ---
-imagescr: <iiif-annotation annotationurl="/annotate/annotations/ua023-015-003-bx0002-004-026-003.json"
+imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/ua023-015-003-bx0002-004-026-003.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: ua023-015-003-bx0002-004-026-list.json
