--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-009.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-009.md
@@ -1,10 +1,10 @@
 ---
-imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/4058a628-c593-463e-9736-8a821e178fee-009.json"
+imagescr: <iiif-annotation annotationurl="/annotations/4058a628-c593-463e-9736-8a821e178fee-009.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags:
 - church
-- deconsecrated
+- standing
 ---
-San Vidal Church. Currently is used as a event and concert hall
+The Chiesa di S. Maria Formosa or Santa Maria Formosa church.
