--- a/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-010.md
+++ b/_annotation_data/4058a628-c593-463e-9736-8a821e178fee-010.md
@@ -1,10 +1,8 @@
 ---
-imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/4058a628-c593-463e-9736-8a821e178fee-010.json"
+imagescr: <iiif-annotation annotationurl="/annotations/4058a628-c593-463e-9736-8a821e178fee-010.json"
   styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 4058a628-c593-463e-9736-8a821e178fee-list.json
 tags:
-- church
-- standing
+- dsafsadf
 ---
-The Chiesa di S. Maria Formosa or Santa Maria Formosa church.
