--- a/_annotation_data/00000001jp2-001.md
+++ b/_annotation_data/00000001jp2-001.md
@@ -1,8 +1,7 @@
 ---
-imagescr: <iiif-annotation annotationurl="https://dnoneill.github.io/annotate/annotations/00000001jp2-001.json"
-  styling="image_only:true"></iiif-annotation>
+imagescr: <iiif-annotation annotationurl="/annotations/00000001jp2-001.json" styling="image_only:true"></iiif-annotation>
 layout: searchview
 listname: 00000001jp2-list.json
 tags: []
 ---
-test
+A plan of the City of New York
