--- a/_posts/2019-09-04-goa.md
+++ b/_posts/2019-09-04-goa.md
@@ -7,7 +7,7 @@ Annotated map of Goa, India created around the 1880s. This uses [an item from Ha
 
 **Embed code:**
 ```
-<iiif-storyboard annotationlist="http://0.0.0.0:5555/annotate/annotations/ids24374656-canvas-24374656-list.json" styling="tagscolor: {'altars in church': 'red', 'ruins': 'blue'}; overlaycolor: green; toggleoverlay:true"></iiif-storyboard>
+<iiif-storyboard annotationlist="https://dnoneill.github.io/annotate/annotations/ids24374656-canvas-24374656-list.json" styling="tagscolor: {'altars in church': 'red', 'ruins': 'blue'}; overlaycolor: green; toggleoverlay:true"></iiif-storyboard>
 ```
 
-<iiif-storyboard annotationlist="http://0.0.0.0:5555/annotate/annotations/ids24374656-canvas-24374656-list.json" styling="tagscolor: {'altars in church': 'red', 'ruins': 'blue'}; overlaycolor: green; toggleoverlay:true"></iiif-storyboard>
+<iiif-storyboard annotationlist="https://dnoneill.github.io/annotate/annotations/ids24374656-canvas-24374656-list.json" styling="tagscolor: {'altars in church': 'red', 'ruins': 'blue'}; overlaycolor: green; toggleoverlay:true"></iiif-storyboard>
