update post, update theme

--- a/_posts/2019-10-28-unicorn.md
+++ b/_posts/2019-10-28-unicorn.md
@@ -1,17 +1,21 @@
 ---
 layout: post
-title: Annotated *The Hunt of the Unicorn*
+title: Annotated <i>The Hunt of the Unicorn</i>
 ---
 
 This example does not use existing IIIF images. Instead it takes the public domain images from the Metropolitan Museum of Art's digital collection.
 Specifically I downloaded all the images in the [_Unicorn Tapestries_](https://www.metmuseum.org/search-results#!/search?q=Unicorn%20Tapestries).
+
 Then I resized the images so they were all the same height using [GIMP](https://www.gimp.org). 
-Then using ImageMagick I stitched the images together using [Imagemagick](https://imagemagick.org). I used `brew` to install Imagemagick (`brew install imagemagick`).
-The command to stitch images together with Imagemagick is: `convert [file1] [file2] [file3] +append [outputfile]`.
-From there I followed the instructions in [https://dnoneill.github.io/annotate/help/usingimages/#creating-iiif-images](Creating IIIF images) page.
+
+Then using ImageMagick I stitched the images together using [Imagemagick](https://imagemagick.org) in the command line. 
+
+The command to stitch images together with Imagemagick is: `convert [file1] [file2] [file3] +append [outputfile]`. This will work with 2 or more files.
+
+From there I followed the instructions in [Creating IIIF images](https://dnoneill.github.io/annotate/help/usingimages/#creating-iiif-images) page.
 
 
 
 
-<style>.annotation {height: auto!important}.annotation {margin: 3px 0px 0px!important}</style>
-<iiif-storyboard annotationlist='https://dnoneill.github.io/annotate/annotations/unicorn-list.json' styling='overlaycolor: #6bdcf7;fit: horizontal;annoview: collapse;title: The Hunt of the Unicorn (All 7 Panels);'></iiif-storyboard>
+<style>.annotation {height: auto!important}</style>
+<iiif-storyboard annotationlist='https://dnoneill.github.io/annotate/annotations/unicorn-list.json' styling='overlaycolor: #6bdcf7;fit: horizontal;annoview: collapse;title: The Hunt of the Unicorn (All 7 Panels);overlaynext: true;'></iiif-storyboard>
