--- a/_posts/2019-10-28-unicorn.md
+++ b/_posts/2019-10-28-unicorn.md
@@ -8,14 +8,17 @@ Specifically I downloaded all the images in the [_Unicorn Tapestries_](https://w
 
 Then I resized the images so they were all the same height using [GIMP](https://www.gimp.org). 
 
-Then using ImageMagick I stitched the images together using [Imagemagick](https://imagemagick.org) in the command line. 
-
-The command to stitch images together with Imagemagick is: `convert [file1] [file2] [file3] +append [outputfile]`. This will work with 2 or more files.
+I stitched the images together using [Imagemagick](https://imagemagick.org) in the command line. The command to stitch images together is: `convert [file1] [file2] [file3] +append [outputfile]`. This will work with 2 or more files.
 
 From there I followed the instructions in [Creating IIIF images](https://dnoneill.github.io/annotate/help/usingimages/#creating-iiif-images) page.
 
-
-
+This storyboard uses multiple settings:
+- overlaycolor: white
+- activecolor: white
+- fit: horizontal
+- overlaynext: true
+- annoview: collapse
+- CSS sets height to auto; Default for the collapse view is an 100% height;
 
 <style>.annotation {height: auto!important}</style>
-<iiif-storyboard annotationlist='https://dnoneill.github.io/annotate/annotations/unicorn-list.json' styling='overlaycolor: #6bdcf7;fit: horizontal;annoview: collapse;title: The Hunt of the Unicorn (All 7 Panels);overlaynext: true;'></iiif-storyboard>
+<iiif-storyboard annotationlist='https://dnoneill.github.io/annotate/annotations/unicorn-list.json' styling='overlaycolor: white;activecolor: white;fit: horizontal;overlaynext: true;annoview:collapse;'></iiif-storyboard>
